# rag-llm-assessment

./: .env.example  .gitignore  README.md  docker-compose.yaml  example_text.txt  query_knowledge_base.sh  start.sh  test_langchain.py
ingestion-api/: Dockerfile  pyproject.toml
ingestion-api/app/: constants.py  database.py  main.py  models.py  services.py
ingestion-api/app/routers/: document.py
retrieval-api/: Dockerfile  pyproject.toml
retrieval-api/app/: constants.py  database.py  main.py  models.py  services.py
retrieval-api/app/routers/: health.py  retrieval.py
tools/: load_document.sh  query_knowledge_base.sh
