[tool.poetry]
name = "ingestion-api"
version = "0.1.0"
description = "A service for processing and storing text documents on vector store databases."
authors = ["Marina Rosa <marina@tecno.capital>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
