[tool.poetry]
name = "retrieval-api"
version = "0.1.0"
description = "A service for retrieving context from a vector store database using similarity search on an user's query and generating responses using an LLM."
authors = ["Marina Rosa <marina@tecno.capital>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.110.3"
uvicorn = "0.29.0"
langchain = "0.1.20"
langchain-community = "0.0.38"
langchain-weaviate = "0.0.1.post1"
spacy = "3.7.4"
langchainhub = "0.1.15"
langchain-openai = "0.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
